@@ -1,3 +1,8 @@
+2004-08-04  Philippe Gerum  <rpm@xenomai.org>
+
+	* nucleus/timer.c (xntimer_next_shot): Anticipate the next timer
+	shot better.
+
 2004-08-04  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
 
 	* include/nucleus/asm-i386/system.h: Fix FPU support for
